Fix bug that was messing up images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </p>
           <figure>
             <img
-              src="/assets/download.jpg"
+              src="../assets/download.jpg"
               alt="Bubbly sourdough starter in a jar"
             />
             <figcaption>Bubbly and active sourdough starter.</figcaption>
@@ -43,7 +43,7 @@
           </p>
           <figure>
             <img
-              src="/assets/sourdough-loaf.jpg"
+              src="../assets/sourdough-loaf.jpg"
               alt="a loaf of sourdough bread"
             />
             <figcaption>A beautiful loaf of sourdough bread</figcaption>
